--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest --watch"
   },
   "dependencies": {
     "next": "11.1.4",
@@ -16,6 +17,9 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
+    "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
     "@types/react": "17.0.2",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
@@ -29,9 +33,16 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "given2": "^2.1.7",
     "husky": "^8.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
+    "jest-plugin-context": "^2.9.0",
     "lint-staged": "^13.0.3",
+    "msw": "^0.43.1",
     "prettier": "^2.7.1",
+    "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   }
 }
